--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,11 @@ m4/ltversion.m4
 m4/lt~obsolete.m4
 src/stamp-h1
 libsecp256k1.pc
-/obj/
 /bin/
+/obj/
+/packaging/
+*.suo
+*.sdf
+*.aps
+*.opensdf
+*.user
