--- a/builds/msvc/vs2017/secp256k1_tests/secp256k1_tests.props
+++ b/builds/msvc/vs2017/secp256k1_tests/secp256k1_tests.props
@@ -46,8 +46,8 @@
       
       <PreprocessorDefinitions Condition="'$(Option-testssl)' == 'true'">ENABLE_OPENSSL_TESTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
-    <Link>
-      <AdditionalOptions Condition="'$(DebugOrRelease)' == 'Debug'">/OPT:NOLBR /IGNORE:4099 %(AdditionalOptions)</AdditionalOptions>
+    <Link Condition="'$(DebugOrRelease)' == 'Debug'">
+      <AdditionalOptions>/OPT:NOLBR /IGNORE:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command Condition="'$(DebugOrRelease)' == 'Release'">$(TargetPath) 5 41234567890987654321</Command>
